<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.newbie.irhamdzuhri.RumusRumus.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/text_gambar"
                android:src="@drawable/tabung" />

            <TextView
                android:id="@+id/luas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/gambar"
                android:text="@string/luas"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rumus_luas"
                android:layout_toEndOf="@+id/gambar"
                android:text="@string/volume"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/volume"
                android:layout_toEndOf="@+id/gambar"
                android:text="Phi x ( r x r ) x t" />

            <TextView
                android:id="@+id/rumus_luas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/gambar"
                android:text="(2 x Phi x r x r) + Phi x (r x 2) x t"
                android:layout_below="@+id/luas"
                android:layout_marginBottom="8dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jari_jari"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_jari_tabung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tinggi"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_tinggi_tabung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_hitung_luas_bola"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_luas"
                android:text="@string/hitung_luas"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_hitung_volume_bola"
                style="?android:buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_volume"
                android:text="@string/hitung_volume"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_hasil_tabung"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/hasil"
            android:lines="2"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
