<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.MainActivity">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/balok" />

            <TextView
                android:id="@+id/luas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/gambar"
                android:text="@string/luas"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rumus_luas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/luas"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/gambar"
                android:text="2 x ( p x l + p x t + l x t )" />

            <TextView
                android:id="@+id/keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rumus_luas"
                android:layout_toEndOf="@+id/gambar"
                android:text="@string/keliling"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rumus_keliling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/keliling"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@+id/gambar"
                android:text="4 x (P + l + t)" />

            <TextView
                android:id="@+id/volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rumus_keliling"
                android:layout_toEndOf="@+id/gambar"
                android:text="@string/volume"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/volume"
                android:layout_toEndOf="@+id/gambar"
                android:text="Panjang x Lebar x Tinggi" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/panjang"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lebar"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tinggi"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_hitung_luas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_luas"
                android:text="Hitung\nLuas"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_hitung_keliling"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_keliling"
                android:text="@string/hitung_keliling"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/btn_hitung_volume"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung_volume"
                android:text="@string/hitung_volume"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_hasil"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/hasil"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
