<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/gambar"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/text_gambar"
                android:scaleType="centerCrop"
                android:src="@drawable/kerucut" />

            <TableLayout
                android:id="@+id/table"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_toEndOf="@+id/gambar"
                android:background="@android:color/white"
                android:padding="10dp">

                <TextView
                    android:id="@+id/luas"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/luas"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rumus_luas"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:text="(Phi * ( r x r )) + ( Phi x r x s )" />

                <TextView
                    android:id="@+id/volume"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/volume"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="( 1/3 x (Phi x ( r x r )) x t )" />

            </TableLayout>
        </RelativeLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_hitung_luas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/hitung_luas" />

            <RadioButton
                android:id="@+id/radio_hitung_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/hitung_volume" />
        </RadioGroup>

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text=""
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_text_view_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_text_view_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zero"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_hitung"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_button"
                android:onClick="hitung"
                android:text="@string/hitung"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text="@string/hasil"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
