<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pilih_bangun_ruang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.PilihBangunRuangActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pilih"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Bangun Datar"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:onClick="segitiga"
            android:text="@string/segitiga"
            android:textColor="@android:color/white" />


        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:onClick="lingkaran"
            android:text="@string/lingkaran"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:onClick="persegi"
            android:text="@string/persegi"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:onClick="persegiPanjang"
            android:text="@string/persegi_panjang"
            android:textColor="@android:color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:onClick="trapesium"
            android:text="@string/trapesium"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:onClick="layangLayang"
            android:text="@string/layang_layang"
            android:textColor="@android:color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:onClick="belahKetupat"
            android:text="@string/belah_ketupat"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_hide"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_button2"
            android:text="hidden"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
